# cxx-docker

./: README.md  main.cpp  structure.txt  test.cxx
src/: CMakeLists.txt  main_world.hxx
